--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             filter: grayscale(1);
             opacity: 0.2;
             margin-bottom: 10px;
+            text-align: left;
         }
 
         .waveform-outer.active {
@@ -74,7 +75,9 @@
             height: 100px;
             cursor: ew-resize;
             border-radius: 4px;
-            overflow: hidden;
+            overflow-x: auto;
+            overflow-y: hidden;
+            width: 100%;
         }
 
         .controls {
@@ -124,7 +127,6 @@
             cursor: pointer;
         }
 
-        /* サンプラーセクション */
         .pads {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -156,7 +158,6 @@
             margin-bottom: 8px;
         }
 
-        /* 再生中の発光スタイル */
         .pad.playing {
             background: #0af !important;
             color: #000;
@@ -207,7 +208,7 @@
                 <button class="mode-btn" data-mode="performance">Performance</button>
             </div>
 
-            <div class="track-label">Sync Timeline (Drag to Seek)</div>
+            <div class="track-label" id="timeline-label">Sync Timeline</div>
             <div id="outer-full" class="waveform-outer">
                 <div id="waveform-full" class="waveform-container"></div>
             </div>
@@ -223,7 +224,7 @@
                 <button id="stopBtn" class="mode-btn">頭出し</button>
                 <div class="zoom-controls">
                     <span>全体</span>
-                    <input type="range" id="zoomSlider" min="0" max="500" value="20">
+                    <input type="range" id="zoomSlider" min="1" max="1000" value="10">
                     <span>拡大</span>
                 </div>
             </div>
@@ -242,7 +243,7 @@
         let audioCtx;
         const buffers = {};
         const wavesurfers = {};
-        const activeSources = {}; // 再生中のSourceを管理
+        const activeSources = {};
 
         async function getValidUrl(name) {
             for (const ext of ['.wav', '.mp3']) {
@@ -253,40 +254,44 @@
         }
 
         function initWavesurfer(id, url) {
-            const ws = WaveSurfer.create({ container: `#waveform-${id}`, waveColor: '#666', progressColor: id === 'full' ? '#0af' : (id === 'solo' ? '#f0f' : '#0f0'), cursorColor: '#fff', height: 100, url: url, interact: true, minPxPerSec: 20 });
-            ws.on('interaction', () => { const time = ws.getCurrentTime(); Object.values(wavesurfers).forEach(o => { if (o !== ws) o.setTime(time); }); });
+            const ws = WaveSurfer.create({
+                container: `#waveform-${id}`,
+                waveColor: '#666',
+                progressColor: id === 'full' ? '#0af' : (id === 'solo' ? '#f0f' : '#0f0'),
+                cursorColor: '#fff',
+                height: 100,
+                url: url,
+                interact: true,
+                fillParent: false, // 時間軸固定のため必須
+                minPxPerSec: 10
+            });
+
+            // 同期シーク
+            ws.on('interaction', () => {
+                const time = ws.getCurrentTime();
+                Object.values(wavesurfers).forEach(o => { if (o !== ws) o.setTime(time); });
+            });
             return ws;
         }
 
         function playSample(note, velocity) {
             if (!buffers[note] || !audioCtx) return;
-
-            // 既存の音があれば停止（ゲート/連打対策）
             stopSample(note);
-
             const source = audioCtx.createBufferSource();
             source.buffer = buffers[note];
             const gain = audioCtx.createGain();
             gain.gain.value = velocity / 127;
             source.connect(gain).connect(audioCtx.destination);
-
             activeSources[note] = { source, gain };
             source.start(0);
-
-            // 視覚フィードバック（光る）
             const pad = document.getElementById(`pad-${note}`);
             pad.classList.add("playing");
-
-            // 再生終了時に光を消す
-            source.onended = () => {
-                pad.classList.remove("playing");
-                delete activeSources[note];
-            };
+            source.onended = () => { pad.classList.remove("playing"); delete activeSources[note]; };
         }
 
         function stopSample(note) {
             if (activeSources[note]) {
-                activeSources[note].source.stop();
+                try { activeSources[note].source.stop(); } catch (e) { }
                 delete activeSources[note];
             }
         }
@@ -295,15 +300,40 @@
             this.textContent = "Loading...";
             audioCtx = new (window.AudioContext || window.webkitAudioContext)();
 
+            // 1. 波形の初期化とロード
+            const wsPromises = [];
             for (const key in TRACK_NAMES) {
                 const url = await getValidUrl(TRACK_NAMES[key]);
-                wavesurfers[key] = initWavesurfer(key, url);
+                const ws = initWavesurfer(key, url);
+                wavesurfers[key] = ws;
+                // ロード完了を待つプロミス
+                wsPromises.push(new Promise(resolve => ws.once('ready', resolve)));
             }
 
+            // 2. 波形のロード完了後にズームの最小値を計算（一度きり）
+            Promise.all(wsPromises).then(() => {
+                let maxDur = 0;
+                Object.values(wavesurfers).forEach(ws => {
+                    if (ws.getDuration() > maxDur) maxDur = ws.getDuration();
+                });
+
+                const containerWidth = document.querySelector('.waveform-container').clientWidth;
+                const minZoom = containerWidth / maxDur; // 全体が収まるpx/sec
+
+                const slider = document.getElementById("zoomSlider");
+                slider.min = minZoom;
+                slider.max = 500; // 十分な拡大率
+                slider.value = minZoom;
+
+                // 初期ズーム適用
+                Object.values(wavesurfers).forEach(ws => ws.zoom(minZoom));
+                document.getElementById('timeline-label').textContent = "Sync Timeline (Locked to Scale)";
+            });
+
+            // 3. サンプラーのロード
             const padsContainer = document.getElementById("pads");
             for (const note in SAMPLE_NAMES) {
                 const url = await getValidUrl(SAMPLE_NAMES[note]);
-
                 const unit = document.createElement("div");
                 unit.className = "pad-unit";
                 unit.innerHTML = `
@@ -312,29 +342,25 @@
                         <label><input type="radio" name="m-${note}" value="one" checked><span>OneShot</span></label>
                         <label><input type="radio" name="m-${note}" value="gate"><span>Gate</span></label>
                     </div>`;
-
                 const pad = unit.querySelector(".pad");
                 pad.addEventListener('mousedown', () => playSample(note, 100));
                 window.addEventListener('mouseup', () => {
                     const isGate = unit.querySelector(`input[name="m-${note}"]:checked`).value === 'gate';
                     if (isGate) stopSample(note);
                 });
-
                 padsContainer.appendChild(unit);
-                const res = await fetch(url);
-                const ab = await res.arrayBuffer();
-                buffers[note] = await audioCtx.decodeAudioData(ab);
+                fetch(url).then(r => r.arrayBuffer()).then(ab => audioCtx.decodeAudioData(ab)).then(b => buffers[note] = b);
             }
 
+            // MIDI設定
             try {
                 const midi = await navigator.requestMIDIAccess();
                 [...midi.inputs.values()].forEach(input => {
                     input.onmidimessage = (e) => {
                         const [s, n, v] = e.data;
                         const cmd = s & 0xf0;
-                        if (cmd === 0x90 && v > 0) {
-                            playSample(n, v);
-                        } else if (cmd === 0x80 || (cmd === 0x90 && v === 0)) {
+                        if (cmd === 0x90 && v > 0) playSample(n, v);
+                        else if (cmd === 0x80 || (cmd === 0x90 && v === 0)) {
                             const unit = document.getElementById(`pad-${n}`)?.parentElement;
                             if (unit && unit.querySelector(`input[name="m-${n}"]:checked`).value === 'gate') stopSample(n);
                         }
@@ -347,9 +373,15 @@
             updateMuteState('full');
         };
 
+        // 再生・停止
         document.getElementById("playPauseBtn").onclick = () => Object.values(wavesurfers).forEach(ws => ws.playPause());
         document.getElementById("stopBtn").onclick = () => Object.values(wavesurfers).forEach(ws => { ws.stop(); ws.setTime(0); });
-        document.getElementById("zoomSlider").oninput = (e) => Object.values(wavesurfers).forEach(ws => ws.zoom(parseFloat(e.target.value)));
+
+        // スライダー連動
+        document.getElementById("zoomSlider").addEventListener('input', (e) => {
+            const val = parseFloat(e.target.value);
+            Object.values(wavesurfers).forEach(ws => ws.zoom(val));
+        });
 
         function updateMuteState(activeMode) {
             Object.keys(wavesurfers).forEach(mode => {
